DP-35727: Fix overlapping elements in ckeditor fullscreen mode.

--- a/docroot/themes/custom/mass_admin_theme/css/overrides/editor.css
+++ b/docroot/themes/custom/mass_admin_theme/css/overrides/editor.css
@@ -36,3 +36,11 @@
 .ck-content figure.drupal-entity.align-left.ck-widget + ul ul {
   margin: 0;
 }
+
+html:has([data-fullscreen="fullscreenoverlay"]) div#block-mass-admin-theme-primary-tabs,
+html:has([data-fullscreen="fullscreenoverlay"]) div.filter-help,
+html:has([data-fullscreen="fullscreenoverlay"]) div.paragraph-type-top,
+html:has([data-fullscreen="fullscreenoverlay"]) div.ck-editor:not([data-fullscreen]),
+html:has([data-fullscreen="fullscreenoverlay"]) div.paragraphs-add-wrapper {
+  display: none;
+}
